WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
195280
The include file in ScrollingStateFrameHostingNode.h is wrong
https://bugs.webkit.org/show_bug.cgi?id=195280
Summary
The include file in ScrollingStateFrameHostingNode.h is wrong
cathiechen
Reported
2019-03-04 09:00:56 PST
Source/WebCore/page/scrolling/ScrollingStateFrameHostingNode.h should include "ScrollingStateNode.h" instead not "ScrollingStateFrameHostingNode.h"
Attachments
Patch
(1.16 KB, patch)
2019-03-04 09:07 PST
,
cathiechen
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
cathiechen
Comment 1
2019-03-04 09:07:20 PST
Created
attachment 363517
[details]
Patch
WebKit Commit Bot
Comment 2
2019-03-05 06:21:55 PST
Comment on
attachment 363517
[details]
Patch Clearing flags on attachment: 363517 Committed
r242464
: <
https://trac.webkit.org/changeset/242464
>
WebKit Commit Bot
Comment 3
2019-03-05 06:21:57 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug